Fixed logo, fixed masternode list, Fixed README.md

--- a/locale/en.json
+++ b/locale/en.json
@@ -151,5 +151,6 @@
     "heavy_estnext": "Est. Next",
     "heavy_changein": "Reward change in approximately",
     "heavy_key": "Key",
-    "heavy_lastxvotes": "Last 20 votes",
+    "heavy_lastxvotes": "Last 20 votes"
+
 }
