info popup in address

--- a/locale/en.json
+++ b/locale/en.json
@@ -50,7 +50,9 @@
     "size": "Size",
     "transactions": "Transactions",
     "total_sent": "Total Sent",
+    "total_sent_hint": "The total amount of coins sent during the lifetime of the wallet. When sending, not only the amount specified in the sending, but also the entire balance is sent. The balance is sent back to the same wallet.",
     "total_received": "Total Received",
+    "total_received_hint": "The total amount of coins received during the lifetime of the wallet. Including change, which is returned when sending coins.",
     "confirmations": "Confirmations",
     "total": "Total",
     "bits": "Bits",
